--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2018"
 
 [dependencies]
 portmidi = "^0.2"
-serde = "^1.0.108"
-serde_json = "^1.0.56"
 docopt = "^1.1.0"
+serde = { version = "^1.0.108", features = ["derive"] }
+serde_yaml = "0.8"
