--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-portmidi = "^0.2"
+ansi_term = "^0.12"
+crossbeam-channel = "0.4.0"
 docopt = "^1.1.0"
+notify = "5.0.0-pre.3"
+portmidi = "^0.2"
 serde = { version = "^1.0.108", features = ["derive"] }
 serde_yaml = "0.8"
