--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 ansi_term = "^0.12"
+chrono = "0.4"
 crossbeam-channel = "0.4.0"
 docopt = "^1.1.0"
 notify = "5.0.0-pre.3"
