next bar handling

--- a/data/mobile.yaml
+++ b/data/mobile.yaml
@@ -15,10 +15,13 @@ scenes:
     master: inst1
     tracks:
       - instrument: inst1
-        play: [ A ]
+        play: [ B ]
 
       - instrument: drum2
-        # follow: inst1
+        play: [ A0 ]
+
+      - instrument: drum3
+        follow: inst1
         play: [ T0, T1 ]
 
 instruments:
@@ -56,6 +59,18 @@ instruments:
           - null
 
   - name: drum2
+    # device: "USB Uno MIDI Interface"
+    device: "828x MIDI Port"
+    channel: 14
+    sequences:
+      - name: A0
+        steps:
+          - null
+          - { pitch: [38] }
+          - null
+          - { pitch: [38] }
+
+  - name: drum3
     # device: "USB Uno MIDI Interface"
     device: "828x MIDI Port"
     channel: 14
@@ -100,3 +115,10 @@ instruments:
           - null
           - null
           - null
+          -
+      - name: A0
+        steps:
+          - null
+          - { pitch: [42] }
+          - null
+          - { pitch: [39] }
