--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ notify = "5.0.0-pre.3"
 portmidi = "^0.2"
 serde = { version = "^1.0.108", features = ["derive"] }
 serde_yaml = "0.8"
+spin_sleep = "1.0.0"
