--- a/data/mobile.yaml
+++ b/data/mobile.yaml
@@ -5,17 +5,56 @@ controller:
 
 
 playlist:
-  - intro
-  - intro
-  - intro
-  - intro
+  - EMPTYBAR
+  - INTRO1
+  - INTRO2
+  - INTRO2
+  - INTRO3
+  - INTRO3
+  - FULL
+  - FULL
+  - FULL
+  - FULL
+  - INTRO3
+  - INTRO2
+  - INTRO1
+  - _
 
 scenes:
-  - name: intro
-    master: inst1
+  - name: EMPTYBAR
     tracks:
       - instrument: inst1
-        play: [ B ]
+        play: [ _ ]
+
+  - name: INTRO1
+    tracks:
+      - instrument: inst1
+        play: [ A, A, A, A ]
+
+  - name: INTRO2
+    tracks:
+      - instrument: inst1
+        play: [ A, A, A, A ]
+
+      - instrument: poly1B
+        play: [ A1, A2, A3, A4 ]
+
+  - name: INTRO3
+    tracks:
+      - instrument: inst1
+        play: [ A, A, A, A ]
+
+      - instrument: poly1B
+        play: [ A1, A2, A3, A4 ]
+
+      - instrument: drum3
+        follow: inst1
+        play: [ T0, T1 ]
+
+  - name: FULL
+    tracks:
+      - instrument: inst1
+        play: [ B, B, B, B ]
 
       - instrument: drum2
         play: [ A0 ]
@@ -24,12 +63,23 @@ scenes:
         follow: inst1
         play: [ T0, T1 ]
 
+      - instrument: poly1
+        follow: inst1
+        play: [ A ]
+
+      - instrument: poly1B
+        play: [ A1, A2, A3, A4 ]
+
 instruments:
   - name: inst1
     # device: "USB Uno MIDI Interface"
     device: "828x MIDI Port"
     channel: 14
     sequences:
+      - name: SyncTest
+        steps:
+          - { pitch: [ 36] }
+
       - name: A
         steps:
           - { pitch: [ 36 ] }
@@ -122,3 +172,46 @@ instruments:
           - { pitch: [42] }
           - null
           - { pitch: [39] }
+
+  - name: poly1
+    device: "828x MIDI Port"
+    channel: 12
+    data:
+      - device: "828x MIDI Port"
+        channel: 12
+        control: 40
+      - device: "828x MIDI Port"
+        channel: 12
+        control: 56
+    sequences:
+      - name: A
+        steps:
+          - { pitch: [ 67 ], program: 8 }
+          - null
+          - { pitch: [ 65 ], program: 12 }
+          - null
+          - null
+          - null
+          - null
+          - null
+          - null
+          - null
+          - null
+          - null
+          -
+  - name: poly1B
+    device: "828x MIDI Port"
+    channel: 12
+    sequences:
+      - name: A1
+        steps:
+          - { pitch: [ 79 ] }
+      - name: A2
+        steps:
+          - { pitch: [ 65 ] }
+      - name: A3
+        steps:
+          - { pitch: [ 74 ] }
+      - name: A4
+        steps:
+          - { pitch: [ 70 ] }
