parse midi note

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ chrono = "0.4"
 crossbeam-channel = "0.4.0"
 docopt = "^1.1.0"
 notify = "5.0.0-pre.3"
-portmidi = "^0.2"
+#portmidi = "^0.2"
+portmidi = { path = "../portmidi-rs" }
 serde = { version = "^1.0.108", features = ["derive"] }
 serde_yaml = "0.8"
 spin_sleep = "1.0.0"
